--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Juan Cruz\\AppData\\Roaming\\NetBeans\\17\\build.properties
+user.properties.file=C:\\Users\\Lucia\\AppData\\Roaming\\NetBeans\\15\\build.properties
