--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,12 +36,13 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Consultora
 endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout-RELEASE180.jar=C:\\Program Files\\NetBeans-16\\netbeans\\ide\\modules\\AbsoluteLayout-RELEASE180.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${file.reference.AbsoluteLayout-RELEASE180.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
@@ -98,7 +99,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=default_platform
+platform.active=JDK_18
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
