--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,7 +36,7 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/Consultora
 endorsed.classpath=
 excludes=
-file.reference.AbsoluteLayout-RELEASE180.jar=C:\\Program Files\\NetBeans-16\\netbeans\\ide\\modules\\AbsoluteLayout-RELEASE180.jar
+file.reference.AbsoluteLayout-RELEASE180.jar=C:\\Users\\Lucia\\OneDrive\\Escritorio\\AbsoluteLayout-RELEASE180.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -99,7 +99,7 @@ manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_18
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
